@@ -287,6 +287,12 @@ module ActiveRecord
       def distinct(columns, order_by)
         "DISTINCT #{columns}"
       end
+      
+      # ORDER BY clause for the passed order option.
+      # PostgreSQL overrides this due to its stricter standards compliance.
+      def add_order_by_for_association_limiting!(sql, options)
+        sql << "ORDER BY #{options[:order]}"
+      end
     end
   end
 end
