@@ -1,5 +1,7 @@
 *SVN*
 
+* PostgreSQL: use a subselect to correctly perform eager finds with :limit and :order.  #4668 [eventualbuddha]
+
 * Pass a range in :conditions to use the SQL BETWEEN operator.  #6974 [dcmanges]
     Student.find(:all, :conditions => { :grade => 9..12 })
 
